# Docker-Rust-Test

./: Cargo.toml  Dockerfile  Makefile  README.md
scripts/: create_database.sql  tables.sql
src/: main.rs
src/models/: response.rs  user.rs
src/services/: user_service.rs
static/: app.js  index.html  main.css
static/app-services/: authentication.service.js
static/home/: home.controller.js  home.view.html
static/login/: login.controller.js
static/register/: register.controller.js  register.view.html
templates/: head_includes.tpl  index.tpl  login.tpl  nav.tpl
