[package]
name = "docker"
version = "0.1.0"
authors = ["Waqqas Sheikh <waqqas.abdulkareem@gmail.com>"]

[dependencies]
mysql = "11.1.0"
nickel = "0.9.0"
mustache = "0.8.0"
rustc-serialize = "0.3.24"
frank_jwt = "2.5.1"

[dependencies.nickel_cookies]
version = "0.2.0"
default-features = false


[dependencies.cookie]
version = "^0.2"
default-features = false